fixed scrollbar, broke everything else

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
   * {
     box-sizing: border-box;
   }
-  
+
   html,
   body,
   #__next {
@@ -14,6 +14,5 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
   }
 }
